<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.yecraft</groupId>
	<artifactId>bedwars</artifactId>
	<version>1.0</version>

	<!-- FIXME change it to the project's name -->
	<name>BedWars</name>
	<!-- FIXME change it to the project's website -->
	<url>https://www.yecraft.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
    <!-- This adds the Spigot Maven repository to the build -->
    <repository>
    	<id>jitpack.io</id>
    	<url>https://jitpack.io</url>
	</repository>
    <repository>
    	<id>ranull-repo-external</id>
    	<url>https://repo.ranull.com/maven/external/</url>
	</repository>
	<repository>
		<id>nms-repo</id>
		<url>https://repo.codemc.io/repository/nms/</url>
	</repository>
</repositories>
<dependencies>
	<dependency>
    <groupId>dev.sergiferry</groupId>
    <artifactId>playernpc</artifactId>
    <version>2023.4</version>
    <scope>provided</scope>
</dependency>

	<dependency>
		<groupId>org.spigotmc</groupId>
		<artifactId>spigot-api</artifactId>
		<version>1.18.2-R0.1-SNAPSHOT</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>org.spigotmc</groupId>
		<artifactId>spigot</artifactId>
		<version>1.18.2-R0.1-SNAPSHOT</version>
		<scope>provided</scope>
	</dependency>
    <dependency>
    	<groupId>com.github.hamza-cskn.obliviate-invs</groupId>
    	<artifactId>core</artifactId>
    	<version>4.1.11</version>
	</dependency>
	<dependency>

    	<groupId>com.github.hamza-cskn.obliviate-invs</groupId>
    	<artifactId>pagination</artifactId>
    	<version>4.1.11</version>
	</dependency>
    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
	<dependency>
    	<groupId>org.projectlombok</groupId>
    	<artifactId>lombok</artifactId>
    	<version>1.18.24</version>
    	<scope>provided</scope>
	</dependency>
	<dependency>
  	<groupId>org.spigotmc</groupId>
  	<artifactId>plugin-annotations</artifactId>
  	<version>1.2.3-SNAPSHOT</version>
  	<scope>provided</scope>
	</dependency>
	<dependency>
        	<groupId>mysql</groupId>
        	<artifactId>mysql-connector-java</artifactId>
        	<version>8.0.29</version>
        	<scope>provided</scope>
    	</dependency>
	</dependencies>
</project>
